crates/macros/tests/snapshots/token__authorized.snap
---
source: crates/macros/tests/token.rs
assertion_line: 39
expression: "&request"
---
credential_issuer: "http://vercre.io"
client_id: 96bfb9cb-0513-7d64-5532-bed74c48f9ab
grant_type: authorization_code
code: ABCDEF
code_verifier: ABCDEF12345
